--- a/src/sass/components/_backdrop.scss
+++ b/src/sass/components/_backdrop.scss
@@ -1,6 +1,5 @@
 .backdrop {
   position: fixed;
-  display: block;
   z-index: 99999;
   @extend %flexCenter;
   width: 100vw;
